# CrewAIAutoblogger

./: README.md  index.html  latest_kickoff_task_outputs.db  long_term_memory_storage.db  pyproject.toml  report.md  report_1.md  report_10.md  report_11.md  report_12.md  report_13.md  report_14.md  report_15.md  report_2.md  report_3.md  report_4.md  report_5.md  report_6.md  report_7.md  report_8.md  report_9.md  report_scifi_1.md
db/: chroma.sqlite3
entities/Real_estate_blog_idea_generator_for_{Location}._Senior_Data_Researcher_in_{Location}._Reporting_Analyst_in_{Location}/: chroma.sqlite3
short_term/Real_estate_blog_idea_generator_for_{Location}._Senior_Data_Researcher_in_{Location}._Reporting_Analyst_in_{Location}/: chroma.sqlite3
src/firstnew/: crew.py  main.py
src/firstnew/config/: agents.yaml  agentscifi.yaml  kateieagents.yaml  kateietasks.yaml  tasks.yaml  tasksscifi.yaml
src/firstnew/tools/: S_tool.py  custom_tool.py
